force-app/main/default/objects/custom_create76__c/custom_create76__c.object-meta.xml
<CustomObject>
    <label>Custom created object76</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects76</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>