force-app/main/default/objects/custom_create76__c/fields/custom_create_76field562__c.field-meta.xml
<CustomField>
    <fullName>custom_create_76field562__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 76field562</label>
    <type>Checkbox</type>
</CustomField>